--- a/parlana-core-backend/pom.xml
+++ b/parlana-core-backend/pom.xml
@@ -7,8 +7,8 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<spring-version>4.2.9.RELEASE</spring-version>
-		<jackson-version>2.4.1</jackson-version>
+		<spring-version>5.0.0.RELEASE</spring-version>
+		<jackson-version>2.9.0</jackson-version>
 		<gson-version>2.2.4</gson-version>
 		<log4j2-version>2.8.2</log4j2-version>
 	</properties>
@@ -146,6 +146,6 @@
 	</dependencies>
 
 	<build>
-		<finalName>parlana-admin-backend</finalName>
+		<finalName>parlana-core-backend</finalName>
 	</build>
 </project>
